package Models;

import java.util.Date;

public abstract class Person {
    String name;
    String login;
    String password;
    Date birthday;

    Person(String name, Date birthday, String login, String password) {
        this.name = name;
        this.birthday = birthday;
        this.login = login;
        this.password = password;
    }

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public String getLogin() {
        return login;
    }

    public void setLogin(String login) {
        this.login = login;
    }

    public String getPassword() {
        return password;
    }

    public void setPassword(String password) {
        this.password = password;
    }

    public Date getBirthday() {
        return birthday;
    }

    public void setBirthday(Date birthday) {
        this.birthday = birthday;
    }
}